[tool.poetry]
name = "finnbar"
version = "0.2.0"
description = "FINNBAR – a TUI for checking IKEA product availability in your local store, straight from your terminal."
authors = ["fabieu <43068791+fabieu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "finnbar" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
textual = ">=8.1.0, <9.0.0"
requests = ">=2.32.0, <3.0.0"

[tool.poetry.scripts]
finnbar = "finnbar.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
build = [
    "pyinstaller (>=6.19.0,<7.0.0)"
]
